# chat-circuit

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  app.spec  buttons_bar.py  command_invoker.py  commands.py  config_dialog.py  content_widget.py  form_widget.py  header_widget.py  hover_circle.py  install.command  json_canvas_exporter.py  link_line.py  main.py  main.spec  main_window.py  markdown_render.py  minimap.py  models.conf.example  models.py  network_manager.py  provider-config.example.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup_launcher.sh  state_manager.py  views.py  worker.py
.trae/rules/: project_rules.md
resources/: icon.icns
tests/: conftest.py  test_example.json  test_main_window.py
